--- a/matching_algo/templates/upload.html
+++ b/matching_algo/templates/upload.html
@@ -8,11 +8,21 @@
 
 <form id="upload-form" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
 
-    <strong>Files:</strong><br>
+    <strong>mentee file:</strong><br>
     <input id="file-picker" type="file" name="file" accept="csv/*" multiple>
     <div id="msg"></div>
+
+    <strong>mentor file:</strong><br>
+    <input id="file-picker" type="file" name="file" accept="csv/*" multiple>
+    <div id="msg"></div>
+
     <input type="submit" value="Upload!" id="upload-button">
+
 </form>
+
+
+
+
 </body>
 
 </html>
