--- a/matching_algo/templates/upload.html
+++ b/matching_algo/templates/upload.html
@@ -1,28 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Upload</title>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-</head>
-<body>
+<h2>File Upload & Image Preview</h2>
+{% assets "scss_all" %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/upload.scss') }}">
+{% endassets %}
+<script src="{{ url_for('static', filename='js/upload.js') }}"></script>
+<p class="lead">No Plugins <b>Just Javascript</b></p>
 
-<form id="upload-form" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
+<!-- Upload  -->
+<form id="file-upload-form" class="uploader" action="{{ url_for('upload') }}" method="POST" >
+  <input id="file-upload" type="file" name="fileUpload" accept="csv/*" />
 
-    <strong>mentee file:</strong><br>
-    <input id="file-picker" type="file" name="file" accept="csv/*" multiple>
-    <div id="msg"></div>
-
-    <strong>mentor file:</strong><br>
-    <input id="file-picker" type="file" name="file" accept="csv/*" multiple>
-    <div id="msg"></div>
-
-    <input type="submit" value="Upload!" id="upload-button">
-
+  <label for="file-upload" id="file-drag">
+    <img id="file-image" src="#" alt="Preview" class="hidden">
+    <div id="start">
+      <i class="fa fa-download" aria-hidden="true"></i>
+      <div>Select a file or drag here</div>
+      <div id="notimage" class="hidden">Please select an image</div>
+      <span id="file-upload-btn" class="btn btn-primary">Select a file</span>
+    </div>
+    <div id="response" class="hidden">
+      <div id="messages"></div>
+      <progress class="progress" id="file-progress" value="0">
+        <span>0</span>%
+      </progress>
+    </div>
+  </label>
 </form>
-
-
-
-
-</body>
-
-</html>
